--- a/energy-system/energy-producer/src/main/resources/application.properties
+++ b/energy-system/energy-producer/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.application.name=energy-producer
+spring.application.name=energy-user
+
+server.port=8083
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
