--- a/energy-system/percentage-service/src/main/resources/application.properties
+++ b/energy-system/percentage-service/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=percentage-service
 
+server.port=8085
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/energysystem
 spring.datasource.username=disysuser
 spring.datasource.password=disyspw
@@ -7,6 +9,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.datasource.hikari.schema=energysystem
+
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
